# webcam_project

CodingRules/: Template.cpp  Template.h
FlexReadingROS/: FlexReadingROS.ino
PID/: prova.cpp  resources
build-pid-Desktop-Default/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  pid.cbp
build-pid-Desktop-Default/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
build-pid-Desktop-Default/catkin_generated/installspace/: pid.pc  pidConfig.cmake
build-pid-Desktop-Default/devel/: .catkin  .rosinstall  setup.sh
build-pid-Desktop-Default/devel/lib/pkgconfig/: pid.pc
build-pid-Desktop-Default/gtest/: CTestTestfile.cmake  Makefile  gtest.cbp
build-ros_face_detector-Desktop-Default/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  ros_face_detector.cbp
build-ros_face_detector-Desktop-Default/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
build-ros_face_detector-Desktop-Default/catkin_generated/installspace/: ros_face_detector.pc  ros_face_detectorConfig.cmake
build-ros_face_detector-Desktop-Default/catkin_generated/stamps/ros_face_detector/: package.xml.stamp
build-ros_face_detector-Desktop-Default/devel/: .catkin  .rosinstall  setup.sh
build-ros_face_detector-Desktop-Default/devel/lib/pkgconfig/: ros_face_detector.pc
build-ros_face_detector-Desktop-Default/gtest/: CTestTestfile.cmake  Makefile  gtest.cbp
build-ros_img_processor-Desktop-Default/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  ros_img_processor.cbp
build-ros_img_processor-Desktop-Default/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
build-ros_img_processor-Desktop-Default/catkin_generated/installspace/: _setup_util.py  ros_img_processor.pc  ros_img_processorConfig.cmake
build-ros_img_processor-Desktop-Default/devel/: .catkin  .rosinstall  setup.sh
build-ros_img_processor-Desktop-Default/devel/lib/pkgconfig/: ros_img_processor.pc
build-ros_img_processor-Desktop-Default/devel/lib/ros_img_processor/: ros_img_processor
build-ros_img_processor-Desktop-Default/gtest/: CTestTestfile.cmake  Makefile  gtest.cbp
build-ros_kalman_filter-Desktop-Default/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  ros_kalman_filter.cbp
build-ros_kalman_filter-Desktop-Default/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
build-ros_kalman_filter-Desktop-Default/catkin_generated/installspace/: ros_kalman_filter.pc  ros_kalman_filterConfig.cmake
build-ros_kalman_filter-Desktop-Default/catkin_generated/stamps/ros_kalman_filter/: package.xml.stamp
build-ros_kalman_filter-Desktop-Default/devel/: .catkin  .rosinstall  setup.sh
build-ros_kalman_filter-Desktop-Default/gtest/: CTestTestfile.cmake  Makefile  gtest.cbp
build-ros_pid_controller-Desktop-Default/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  ros_pid_controller.cbp
build-ros_pid_controller-Desktop-Default/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
build-ros_pid_controller-Desktop-Default/catkin_generated/installspace/: ros_pid_controller.pc  ros_pid_controllerConfig.cmake
build-ros_pid_controller-Desktop-Default/devel/: .catkin  .rosinstall  setup.sh
build-ros_pid_controller-Desktop-Default/gtest/: CTestTestfile.cmake  Makefile  gtest.cbp
build-webcam_description-Desktop-Default/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  webcam_description.cbp
build-webcam_description-Desktop-Default/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
build-webcam_description-Desktop-Default/catkin_generated/installspace/: webcam_description.pc  webcam_descriptionConfig.cmake
build-webcam_description-Desktop-Default/devel/: .catkin  .rosinstall  setup.sh
build-webcam_description-Desktop-Default/gtest/: CTestTestfile.cmake  Makefile  gtest.cbp
cam_calibration/: camera_calibration.cpp  camera_calibration.xml
cam_capture/: CMakeLists.txt  camera_capture.cpp
meshes/: Piece3.stl
new_urdf_meshes/: Basepart1.stl  Body.stl  Head.stl
pid/: CMakeLists.txt  README.md
pid/src/: pid_main.cpp  pid_node.cpp  pid_node.h
pieces_toprint/: Camera.stl  Finalrobot.3dm  Pieces.3dm
pwm_arduino/: pwm_arduino.ino
pwm_arduino_v2/: pwm_arduino_v2.ino
ros_face_detector/: CMakeLists.txt  package.xml
ros_face_detector/src/: image_transport.h~  ros_face_detector_main.cpp  ros_face_detector_node.cpp  ros_face_detector_node.h
ros_img_processor/: CMakeLists.txt~
ros_img_processor/launch/: head_camera.yaml  ros_img_processor.launch  ros_img_processor.launch~  usb_camera.launch  usb_camera.launch~
ros_img_processor/src/: ros_img_processor_main.cpp  ros_img_processor_node.cpp  ros_img_processor_node.h
ros_kalman_filter/: CMakeLists.txt
ros_kalman_filter/src/: ros_kalman_filter_main.cpp  ros_kalman_filter_node.cpp  ros_kalman_filter_node.h
ros_pid_controller/: CMakeLists.txt  package.xml
ros_pid_controller/src/: pid_main.cpp  pid_node.cpp  pid_node.h
webcam_description/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
webcam_description/config/: controllers.yaml  controllers.yaml~
webcam_description/launch/: display.launch  display.launch~  display.rviz  display_gazebo.launch
webcam_description/meshes/: Piece1.stl  Piece2.stl  base_def.stl  base_def_collision.stl  body_def.stl  body_def_collision.stl  camera_def.stl  head_def.stl  head_def_collision.stl  piece1_collision.stl  piece2_collision.stl  piece3_collision.stl  webcam.stl
webcam_description/robots/: webcam_project.urdf  webcam_project.urdf~  webcap_project.urdf  webcap_project.urdf~
(+10 files in other folders)
